--- a/index.html
+++ b/index.html
@@ -41,12 +41,20 @@
         </nav>
         <ul class="header-contacts list">
           <li class="header-mail">
-            <a class="header-link contact-header" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="header-link contact-header" href="mailto:info@devstudio.com">
+              <svg class="header-icon" width="16" height="12">
+                <use href="./image/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="header-tel">
-            <a class="header-link contact-header" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-link contact-header" href="tel:+380961111111">
+              <svg class="header-icon" width="10" height="16">
+                <use href="./image/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -63,24 +71,44 @@
           <h2 hidden>Наши качества</h2>
           <ul class="qualities-list list">
             <li class="qualities-items">
+              <div class="qualities-box-icon">
+                <svg class="qualities-icon" width="70" height="70">
+                  <use href="./image/symbol-defs.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="qualities-title">Внимание к деталям</h3>
               <p class="qualities-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="qualities-items">
+              <div class="qualities-box-icon">
+                <svg class="qualities-icon" width="70" height="70">
+                  <use href="./image/symbol-defs.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="qualities-title">Пунктуальность</h3>
               <p class="qualities-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="qualities-items">
+              <div class="qualities-box-icon">
+                <svg class="qualities-icon" width="70" height="70">
+                  <use href="./image/symbol-defs.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="qualities-title">Планирование</h3>
               <p class="qualities-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="qualities-items">
+              <div class="qualities-box-icon">
+                <svg class="qualities-icon" width="70" height="70">
+                  <use href="./image/symbol-defs.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="qualities-title">Современные технологии</h3>
               <p class="qualities-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -119,6 +147,33 @@
               />
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p lang="en" class="team-text">Product Designer</p>
+              <ul class="team-social-list list">
+                <li class="team-social-item">
+                  <a href="#" class="team-social">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-twitter-1"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-facebook-1"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-linkedin-1"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -130,6 +185,33 @@
               />
               <h3 class="team-name">Ольга Репина</h3>
               <p lang="en" class="team-text">Frontend Developer</p>
+              <ul class="team-social-list list">
+                <li class="team-social-item">
+                  <a href="#" class="team-social">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-twitter-1"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-facebook-1"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-linkedin-1"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -141,6 +223,33 @@
               />
               <h3 class="team-name">Николай Тарасов</h3>
               <p lang="en" class="team-text">Marketing</p>
+              <ul class="team-social-list list">
+                <li class="team-social-item">
+                  <a href="#" class="team-social">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-twitter-1"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-facebook-1"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-linkedin-1"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -152,6 +261,76 @@
               />
               <h3 class="team-name">Михаил Ермаков</h3>
               <p lang="en" class="team-text">UI Designer</p>
+              <ul class="team-social-list list">
+                <li class="team-social-item">
+                  <a href="#" class="team-social">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-twitter-1"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-facebook-1"></use></svg
+                  ></a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social"
+                    ><svg class="team-icon" width="20" height="20">
+                      <use href="./image/symbol-defs.svg#icon-linkedin-1"></use></svg
+                  ></a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="client">
+        <div class="conteiner">
+          <h2 class="client-title">Постоянные клиенты</h2>
+          <ul class="client-list list">
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./image/symbol-defs.svg#icon-Logo"></use></svg
+              ></a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./image/symbol-defs.svg#icon-Logo-1"></use></svg
+              ></a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./image/symbol-defs.svg#icon-Logo-2"></use></svg
+              ></a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./image/symbol-defs.svg#icon-Logo-3"></use></svg
+              ></a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./image/symbol-defs.svg#icon-Logo-4"></use></svg
+              ></a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./image/symbol-defs.svg#icon-Logo-5"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -159,24 +338,56 @@
     </main>
     <footer class="footer">
       <div class="conteiner">
-        <a href="./index.html" class="logo footer-logo" lang="en"
-          >Web<span class="logo-studio-footer">Studio</span></a
-        >
-        <address>
-          <ul class="footer-contacts list">
-            <li class="footer-list-item">
-              <a href="https://goo.gl/maps/oyyfWnswVZSR6FjeA" class="footer-address"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+        <div class="footer-info">
+          <a href="./index.html" class="logo footer-logo" lang="en"
+            >Web<span class="logo-studio-footer">Studio</span></a
+          >
+          <address>
+            <ul class="footer-contacts list">
+              <li class="footer-list-item">
+                <a href="https://goo.gl/maps/oyyfWnswVZSR6FjeA" class="footer-address"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <p class="footer-text">Присоединяйтесь</p>
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./image/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-list-item">
-              <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./image/symbol-defs.svg#icon-twitter-1"></use></svg
+              ></a>
             </li>
-            <li class="footer-list-item">
-              <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./image/symbol-defs.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./image/symbol-defs.svg#icon-linkedin-1"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
