--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,20 @@
         </nav>
         <ul class="header-contacts list">
           <li class="header-mail">
-            <a class="header-link contact-header" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="header-link contact-header" href="mailto:info@devstudio.com">
+              <svg class="header-icon" width="16" height="12">
+                <use href="./image/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="header-tel">
-            <a class="header-link contact-header" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-link contact-header" href="tel:+380961111111">
+              <svg class="header-icon" width="10" height="16">
+                <use href="./image/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -196,24 +204,56 @@
     </main>
     <footer class="footer">
       <div class="conteiner">
-        <a href="./index.html" class="logo footer-logo" lang="en"
-          >Web<span class="logo-studio-footer">Studio</span></a
-        >
-        <address>
-          <ul class="footer-contacts list">
-            <li class="footer-list-item">
-              <a href="https://goo.gl/maps/oyyfWnswVZSR6FjeA" class="footer-address"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+        <div class="footer-info">
+          <a href="./index.html" class="logo footer-logo" lang="en"
+            >Web<span class="logo-studio-footer">Studio</span></a
+          >
+          <address>
+            <ul class="footer-contacts list">
+              <li class="footer-list-item">
+                <a href="https://goo.gl/maps/oyyfWnswVZSR6FjeA" class="footer-address"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <p class="footer-text">Присоединяйтесь</p>
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./image/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-list-item">
-              <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./image/symbol-defs.svg#icon-twitter-1"></use></svg
+              ></a>
             </li>
-            <li class="footer-list-item">
-              <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./image/symbol-defs.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link"
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./image/symbol-defs.svg#icon-linkedin-1"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
