--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <title>Портфолио</title>
   </head>
   <body class="body">
     <header class="header">
