--- a/index.html
+++ b/index.html
@@ -298,37 +298,37 @@
           <h2 class="client-title">Постоянные клиенты</h2>
           <ul class="client-list list">
             <li class="client-item">
-              <a href="" class="client-link"
+              <a href="#" class="client-link"
                 ><svg class="client-icon" width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo"></use></svg
               ></a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"
+              <a href="#" class="client-link"
                 ><svg class="client-icon" width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-1"></use></svg
               ></a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"
+              <a href="#" class="client-link"
                 ><svg class="client-icon" width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-2"></use></svg
               ></a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"
+              <a href="#" class="client-link"
                 ><svg class="client-icon" width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-3"></use></svg
               ></a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"
+              <a href="#" class="client-link"
                 ><svg class="client-icon" width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-4"></use></svg
               ></a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"
+              <a href="#" class="client-link"
                 ><svg class="client-icon" width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-5"></use></svg
               ></a>
